--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,14 @@ M:2/4
 Q:1/4=140
 L:1/4
 K:C
+C | _C | __C'2 | _C''3 | =C,/2 | ^C,,/4 | ^^C,,,/8
+
+X:1
+T:小鸡的一家
+M:2/4
+Q:1/4=140
+L:1/4
+K:C
 C | _C | __C'2 | _C''3 | =C,/2 | ^C,,/4 | ^^C,,,/8`)
       );
     </script>
