--- a/example/index.html
+++ b/example/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <script type="module">
-      import { parse } from '../dist/bundle.esm.js';
-      console.log(
-        parse(`X:1
+      import { Parser } from '../dist/bundle.esm.js';
+
+      let str = `X:1
 T:小鸡的一家
 M:2/4
 Q:1/4=140
@@ -24,8 +24,10 @@ M:2/4
 Q:1/4=140
 L:1/4
 K:C
-C | _C | __C'2 | _C''3 | =C,/2 | ^C,,/4 | ^^C,,,/8`)
-      );
+C | _C | __C'2 | _C''3 | =C,/2 | ^C,,/4 | ^^C,,,/8`;
+
+      let parser = new Parser(str);
+      console.log(parser.parse());
     </script>
   </body>
 </html>
