feat:添加对延长音的处理

--- a/example/index.html
+++ b/example/index.html
@@ -27,7 +27,8 @@ K:C
 C | _C | __C'2 | _C''3 | =C,/2 | ^C,,/4 | ^^C,,,/8`;
 
       let parser = new Parser(str);
-      console.log(parser.parse());
+      let res = parser.parse();
+      console.log(res);
     </script>
   </body>
 </html>
